...
    <string name="alert_dialog_save">Save</string>
    <string name="alert_dialog_switch">Switch</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="app_icon">App Icon</string>
    <string name="app_name" translatable="false">Plutus\' Wallet</string>
    <string name="blank_string" translatable="false"> </string>
    <string name="category_all">All</string>
    <string name="category_create">Create New Category</string>
    <string name="cfl_no_transactions">No transactions fulfill the filters being applied!</string>
    <string name="filter_account">Account</string>
    <string name="filter_apply">Apply</string>
    <string name="filter_category">Category</string>
    <string name="filter_date">Date</string>
    <string name="filter_invalid_date_range">End date must be after start date!!</string>
    <string name="filter_end">End</string>
    <string name="filter_type">Type</string>
    <string name="filter_reset">Reset</string>
    <string name="filter_start">Start</string>
    <string name="chart_total">"Total: "</string>
    <string name="chart_amount" translatable="false">%1$s%2$s</string>
    <string name="library_mpandroidchart" tools:ignore="ExtraTranslation" translatable="false">MPAndroidChart</string>
    <string name="library_mpandroidchart_github" translatable="false">https://github.com/PhilJay/MPAndroidChart</string>
    <string name="period_days">Days</string>
    <string name="period_months">Months</string>
    <string name="period_weeks">Weeks</string>
...
    <string name="transaction_memo">Memo</string>
    <string name="transaction_memo_hint">\u2517 Additional information</string>
    <string name="transaction_repeat">Repeat</string>
    <string name="transaction_title">Title</string>
    <string name="transaction_title_hint">\u2517 Location of purchase</string>
    <string name="transaction_total">Total</string>
    <string name="type_expense">Expense</string>
    <string name="type_income">Income</string>
    <string name="categories">Categories</string>
    <string name="alert_dialog_edit_account">Edit Account</string>
    <string name="alert_dialog_input_hint">Enter A Name</string>
    <string name="alert_dialog_create_account">Create Account</string>
    <string name="alert_dialog_edit_category">Edit Category</string>
    <string name="alert_dialog_create_category">Create Category</string>
...
