...
            <com.heyzeusv.plutuswallet.ui.cfl.filter.MaxHeightScrollView
                android:id="@+id/filter_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:scrollbarSize="@dimen/scrollbarSmall"
                app:layout_constraintBottom_toTopOf="@+id/filter_action"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/filter_motion_layout"
...
                            app:layout_constraintBottom_toBottomOf="@id/filter_account"
                            app:layout_constraintEnd_toEndOf="@id/filter_account"
                            app:layout_constraintStart_toStartOf="@id/filter_account"
                            app:layout_constraintTop_toTopOf="@id/filter_account">

                            <com.google.android.material.chip.ChipGroup
                                android:id="@+id/filter_account_chips"
                                style="@style/Filter.ChipGroup" />
                        </com.heyzeusv.plutuswallet.ui.cfl.filter.MaxHeightNestedScrollView>
                    </androidx.constraintlayout.motion.widget.MotionLayout>

                    <androidx.constraintlayout.motion.widget.MotionLayout
                        android:id="@+id/filter_category_motion"
...
                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/category_chip_layout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <com.google.android.material.chip.ChipGroup
                                    android:id="@+id/filter_expense_chips"
                                    style="@style/Filter.ChipGroup"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <com.google.android.material.chip.ChipGroup
                                    android:id="@+id/filter_income_chips"
                                    style="@style/Filter.ChipGroup"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </com.heyzeusv.plutuswallet.ui.cfl.filter.MaxHeightNestedScrollView>
                    </androidx.constraintlayout.motion.widget.MotionLayout>
...
                            app:layout_constraintBottom_toBottomOf="@id/filter_date"
                            app:layout_constraintEnd_toEndOf="@id/filter_date"
                            app:layout_constraintStart_toStartOf="@id/filter_date"
                            app:layout_constraintTop_toTopOf="@id/filter_date" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/filter_start_date"
                            style="@style/Filter.Button.Outlined.Child"
                            android:layout_height="0dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="6dp"

                            app:layout_constraintBottom_toBottomOf="@id/filter_date"
                            app:layout_constraintEnd_toEndOf="@id/filter_date"
                            app:layout_constraintStart_toStartOf="@id/filter_date"
                            app:layout_constraintTop_toTopOf="@id/filter_date"
                            tools:text="Start Date" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/filter_end_date"
                            style="@style/Filter.Button.Outlined.Child"
                            android:layout_height="0dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="6dp"

                            app:layout_constraintBottom_toBottomOf="@id/filter_date"
...
