...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/ivchart_pie"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="45dp"
            android:translationY="-6dp"
            android:visibility="@{ivc.ctList.empty ? View.INVISIBLE : View.VISIBLE}"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setUpChart="@{ivc}" />

        <TextView
            android:id="@+id/ivchart_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/chartMarginStartEnd"
            android:layout_marginBottom="26dp"
            android:text="@string/chart_total"
            android:textColor="@color/textColorPrimary"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivchart_total"
            tools:text=" $123,456,789,012" />

        <TextView
            android:id="@+id/emptyTextView"
            style="@style/TextView.Empty"
            android:text="@string/cfl_no_transactions"
            android:visibility="@{ivc.ctList.empty ? View.VISIBLE : View.INVISIBLE}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
